# bistellar-flip

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: linux-clang.yml  linux-gcc.yml  macos.yml  whitespace.yml  windows.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: bistellar.hpp  bistellar_flip.hpp
scripts/: build.sh  iwyu.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bistellar_flip_test.cpp  delaunay_to_remeshing_test.cpp  flip_n_to_m_test.cpp  main.cpp
